--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,690 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@font-face {
+  font-family: 'NeilBold';
+  src: url('./fonts/NeilBold/Neil\ Bold.otf');
+}
+
+@font-face {
+  font-family: 'Futura';
+  src: url(./fonts/Futura\ Light\ font.ttf);
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+body{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 16px;
+  font-family: 'Futura';
+}
+
+.black{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.appear-text {
+  display: none;
+}
+
+.active {
+  display: inline;
+}
+
+h1.head {
+  font-family: 'NeilBold';
+  text-transform: uppercase;
+  width: 100%;
+  font-size: 3rem;
+}
+
+h1.head span {
+  font-family: 'Futura';
+  text-transform: lowercase;
+  font-weight: normal;
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1.5rem;
+  color: #969696;
+}
+
+h3 {
+  color: black;
+  font-size: 1.5rem;
+}
+
+a {
+  color: #969696;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+a:hover {
+  color: black;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.btn, .btn-1 {
+  cursor: pointer;
+}
+
+header {
+  max-width: 900px;
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+header .logo {
+  margin: 0 0 0 0;
+}
+
+header .logo .a-logo {
+  /* opacity: 0; */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .logo .a-logo img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}
+
+header .b-logo {
+  width: 100%;
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .b-logo h2 {
+  color: #969696;
+  font-size: 2rem;
+}
+
+header nav {
+  margin-top: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+header nav ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+header nav ul li {
+  list-style: none;
+}
+
+header nav ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 10px;
+  font-size: 2.5rem;
+  color: #313131;
+}
+
+header nav ul li a:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+section {
+  border-radius: 5px;
+  padding: 0 20px;
+  max-width: 900px;
+  width: 60%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5% 0;
+}
+
+section .video {
+  width: 100%;
+  height: 70%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+section .video-mob {
+  display: none;
+}
+
+.text {
+  margin-top: 5%;
+  width: 100%;
+}
+
+.text p {
+  margin: 20px 0;
+}
+
+section#video-con {
+  width: 100%;
+  max-width: 100%;
+  padding: 5% 0;
+}
+
+section#video-con .video {
+  background: none;
+  /* opacity: 0; */
+}
+
+section#story {
+  padding: 5% 20px;
+  background-color: black;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+section#story .text {
+  text-align: left;
+  width: 100%;
+}
+
+section#story .text p {
+  margin: 20px 0;
+}
+
+section#story h1 {
+  color: white;
+}
+
+section#menu {
+  padding: 5% 20px;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+section#menu .text {
+  margin-top: 5%;
+  width: 100%;
+}
+
+section#menu .text .bold {
+  color: black;
+}
+
+section#menu .text p {
+  margin: 20px 0;
+}
+
+section#projects {
+  padding: 5% 20px;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+section#projects .project {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  height: 100%;
+  margin: 5% 0;
+}
+
+section#projects .project .project-text {
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+section#projects .project .project-text p {
+  margin: 4% 0;
+}
+
+section#projects .project .project-text h3 {
+  margin: 4% 0;
+}
+
+section#projects .project .project-img {
+  width: 60%;
+}
+
+section#projects .project .project-img img {
+  width: 100%;
+}
+
+section#contact {
+  color: white;
+  background-color: black;
+  padding: 5% 0 0  20px;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+section#contact .table {
+  margin: 5% 0;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  flex-direction: column;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+section#contact .table .email {
+  margin-bottom: 0;
+}
+
+section#contact .table .email a {
+  padding: 0;
+}
+
+section#contact .table .email a:hover {
+  color: white;
+}
+
+section#contact .table .name {
+  margin-top: 5%;
+  height: 100%;
+}
+
+section#contact .table .name a {
+  padding: 0;
+}
+
+section#contact .table .name a:hover {
+  color: white;
+}
+
+section#contact h3 {
+  color: white;
+}
+
+footer{
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+}
+
+footer div{
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  padding-left: 10px;
+  padding-bottom: 5%;
+}
+
+footer div .con ul{
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+  list-style: none;
+}
+footer div .con ul li{
+}
+
+footer div .con ul li a{
+  font-size: 3.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer div .con ul li a:hover{
+  color: #fff;
+  scale: 1.1;
+  transition: 0.5s;
+}
+
+footer div .copyrights{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+@media only screen and (max-width: 1200px) {
+  p {
+    font-size: 1rem;
+  }
+  header {
+    height: 100vh;
+    padding: 5% 0;
+  }
+  body, footer {
+    width: 100%;
+  }
+  header .logo, header, section, section#projects .project, section#contact .table {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  section {
+    width: 100%;
+  }
+  header {
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .logo .a-logo img {
+    width: 80%;
+  }
+  header .b-logo {
+    margin-top: 5%;
+  }
+  header .b-logo h2 {
+    font-size: 1rem;
+  }
+  nav ul li {
+    font-size: 1.5rem;
+  }
+  nav ul li a {
+    font-size: 2rem;
+  }
+  nav .copyrights {
+    font-size: 16px;
+  }
+  header nav {
+    width: 100%;
+  }
+  h1.head {
+    font-size: 1.5rem;
+  }
+  h1.head span {
+    font-size: 1rem;
+  }
+  section#contact .table .email h3 {
+    font-size: 1rem;
+    margin-bottom: 0;
+  }
+  section#contact .table .email a {
+    font-size: 1rem;
+  }
+  section#contact .table .name {
+    margin-top: 5%;
+    height: 100%;
+  }
+  section#contact .table .name a {
+    font-size: 1rem;
+  }
+  section#video-con {
+    width: 100%;
+  }
+  header nav ul li a {
+    font-size: 1.5rem;
+  }
+  header nav {
+    margin-top: 5%;
+  }
+  section#projects .project .project-text {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  section#projects .project .project-text h3 {
+    margin: 0 20px 0 0;
+  }
+  section#projects .project .project-text p {
+    margin: 0;
+  }
+  section#projects .project {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  section#projects .project .project-img {
+    width: 100%;
+  }
+  section#video-con {
+    border-top: none;
+    border-bottom: none;
+  }
+  footer div{
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+  footer div{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  footer div{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  footer div{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 0 ;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  section .video-deskt {
+    display: none;
+  }
+  section .video-mob {
+    display: block;
+  }
+}
+
+@-webkit-keyframes fadeinout {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeinout {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
